--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <style>
   body{margin:15px 50px 0px 30px; }
   .id1{text-align:right ; background-color:#A1E8E4 ; color:#27A7B0; margin-top:10px; font-family:arial; font-size:40px ;; margin-right:auto
-  ; margin-left:auto; width:1405px; margin-bottom: 0px}
-  .id2{border:solid 5px LightSeaGreen ;background-color:LightSkyBlue ;border-radius:30px;float:left; width:180px; margin-left:49px}
-  .id3{background-color:#D5F8FB; border:5px solid PowderBlue; border-radius:20px ; float :right;width:1200px; overflow:auto;margin-top:-13px
-  ; margin-bottom:10px ; height:300px ;margin-right:50px;
-} 
+  ; margin-left:auto; width:84%; margin-bottom: 0px;padding-right: 5px}
+  .id2{border:solid 5px LightSeaGreen ;background-color:LightSkyBlue ;border-radius:30px;float:left; width:12.5%; margin-left:117px}
+  .id3{background-color:#D5F8FB; border:5px solid PowderBlue; border-radius:20px ; float :right;width:70%;; overflow:auto;margin-top:-13px
+  ; margin-bottom:10px ; height:300px ;margin-right:117px;;
+}
   .id4{color:#1C7278; font-size:25px; margin-left:0px}
-  .id5{border-bottom:dashed; margin-left:3px}
-  .id6{font-size:25 ; color:#1C7278 ; padding :3px }
+  .id5{border-bottom:dashed; margin-left:10px;}
+  .id6{font-size:22px ; color:#1C7278 ; padding :3px }
   .id7{float:right; width:200px ; padding:0px 10px 5px 0px}
-    .id8{background-color:#D5F8FB ; border:5px solid PowderBlue ; border-radius:20px ; float :right;width:1200px ; overflow:auto ;
-    margin-bottom:7px ; margin-right:50px}
+    .id8{background-color:#D5F8FB ; border:5px solid PowderBlue ; border-radius:20px ; float :right;width:70%; ; overflow:auto ;
+    margin-bottom:7px ; margin-right:117px;}
     .fresh {font-size:27px;}
     .id10{font-size:35px}
 
@@ -26,8 +26,9 @@
 <div class="fresh"><p style="margin-top:0px">So fresh and so clean </p></div>
 </div>
 <div class="id2">
-<h1 style="padding:3px ; color:DarkCyan ; font-family:arial;padding-left:10px">Friends</h1>
-<ul style="padding-left:22px; padding-top:0px;font-size:20px ; color:#1E6267">
+<h1 style="padding:3px ; color:DarkCyan ; font-family:arial;padding-left:10px;padding-top: 15px;
+;margin-top: -.1px;}">Friends</h1>
+<ul style="padding-left:22px; padding-top:0px;font-size:21px ; color:#1E6267;margin-top: -17px;">
 <li>190m Buddies</li>
 <li>Big Will</li>
 <li>Conan The Librarian</li>
@@ -37,11 +38,11 @@
  <p class="id4"><span class="id5 id10" >04/08/09:</span> <span class="id10">Spatulus</span><br/>
 <div class="id6"> <img src="download.jpg" class="id7">Yesterday i went to the shop and bought some spatulas
 because my own were lost , i found many types but i bought the most expensive  </div>
- </p> 
+ </p>
 </div>
 <br/>
 <div class="id8">
- <p class="id4"><span class="id5 id10">04/08/09</span> <span class="id10">Cookie Monster Cupcakes</span><br/>
+ <p class="id4"><span class="id5 id10">04/08/09:</span> <span class="id10">Cookie Monster Cupcakes</span><br/>
 <div class="id6"> <img src="download 1.jpg" class="id7">
 My favourite carton is cookie monster and my favourite dessert i cup cake
 so, Cookie monster cup cakes are the best of both words <br/>
@@ -49,7 +50,7 @@ Did you know? Cookie Monster once said "Sometimes me think what is love ,and the
 think love is what lask cookie for . Me give up the last cookie for your."I wonder if
 the same applies for the cupcakes ? (If so,I don't think ever i can love anyone )
   </div>
- </p> 
+ </p>
 </div>
 
 </body>
