--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     .id10{font-size:35px}
 
 </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body >
 <div class="id1">
