--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   body{ }
   .id1{text-align:right ; background-color:#A1E8E4 ; color:#27A7B0; margin-top:10px; font-family:arial; font-size:40px ;; margin-right:auto
   ; margin-left:auto; width:84%; margin-bottom: 0px;padding-right: 5px}
-  .id2{border:solid 5px LightSeaGreen ;background-color:LightSkyBlue ;border-radius:30px;float:left; width:14%; margin-left:8%;height: 160px;margin-right: 1%;margin-top: -.65%;}
+  .id2{border:solid 5px LightSeaGreen ;background-color:LightSkyBlue ;border-radius:30px;float:left; width:14%; margin-left:8%;height: 160px;margin-right: 1%;margin-top: -0.65%;}
   .id3{background-color:#D5F8FB; border:5px solid PowderBlue; border-radius:20px ; float :left;width:68%; overflow:auto;margin-top:-13px
   ; margin-bottom:10px ; height:300px ;margin-right:0px;;
 }
